fase 3 hasan dan checking code